src/test/compile-fail/minus-string.rs
// error-pattern:can not apply unary operator `-` to type `str`

fn main() { -"foo"; }
